--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ include = [
     "**/*.rs",
     "Cargo.toml",
     "README.md",
+    "CHANGELOG.md",
     "LICENSE-MIT",
     "LICENSE-APACHE",
 ]
