--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ description = "Platform-agnostic Rust driver for the DS1307 real-time clock."
 readme = "README.md"
 keywords = ["ds1307", "rtc", "clock", "driver", "embedded-hal-driver"]
 categories = ["embedded", "hardware-support", "no-std"]
+homepage = "https://github.com/eldruin/ds1307-rs"
+documentation = "https://docs.rs/ds1307"
+
 include = [
     "**/*.rs",
     "Cargo.toml",
