--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ maintenance = { status = "actively-developed" }
 embedded-hal = "0.2"
 
 [dev-dependencies]
+linux-embedded-hal = "0.3"
 embedded-hal-mock = "0.7"
 
 [profile.release]
