--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ coveralls = { repository = "eldruin/ds1307-rs", branch = "master", service = "gi
 
 [dependencies]
 embedded-hal = "0.2"
+rtcc = "0.2"
 
 [dev-dependencies]
 linux-embedded-hal = "0.3"
